--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@tanstack/react-query": "^4.24.4",
+    "axios": "^1.3.1",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-dotenv": "^3.4.7",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
