--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-dotenv": "^3.4.7",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
@@ -42,6 +43,7 @@
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   },
   "jest": {
