Build list country code select ui

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_URL = https://jsonplaceholder.typicode.com/
+BASE_API_URL = https://jsonplaceholder.typicode.com/
+API_COUNTRY_CODE = https://61bc10c2d8542f001782453d.mockapi.io/
