--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.3.1",
+    "cors": "^2.8.5",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-dotenv": "^3.4.7",
