--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.5",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.1.3",
@@ -20,9 +21,12 @@
     "cors": "^2.8.5",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-android-location-enabler": "^1.2.2",
     "react-native-dotenv": "^3.4.7",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.4.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
