--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-image-crop-picker": "^0.39.0",
     "react-native-maps": "^1.4.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
-    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-splash-screen": "^3.3.0",
