--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,7 +89,7 @@ def reactNativeArchitectures() {
 }
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    android.ndkVersion "23.1.7779620"
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
