--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-maps": "^1.4.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-vision-camera": "^2.15.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
