--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.3.1",
     "cors": "^2.8.5",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-android-location-enabler": "^1.2.2",
+    "react-native-date-picker": "^4.2.9",
     "react-native-dotenv": "^3.4.7",
     "react-native-dropdown-picker": "^5.4.4",
+    "react-native-element-dropdown": "^2.6.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-maps": "^1.4.0",
