--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.3.1",
     "cors": "^2.8.5",
+    "lottie-react-native": "^5.1.5",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-android-location-enabler": "^1.2.2",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-date-picker": "^4.2.9",
     "react-native-dotenv": "^3.4.7",
     "react-native-dropdown-picker": "^5.4.4",
