--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,11 +161,18 @@ dependencies {
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
     
+    implementation('com.google.firebase:firebase-analytics:17.3.0')
+    
     implementation project(':react-native-splash-screen')
 
     implementation project(':lottie-react-native')
+    
+    implementation project(':react-native-push-notification')
 
     implementation project(':react-native-android-location-enabler')
+    
+    implementation platform('com.google.firebase:firebase-bom:31.2.2')
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
@@ -181,3 +188,4 @@ dependencies {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+apply plugin: 'com.google.gms.google-services'
