--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -171,6 +171,8 @@ dependencies {
 
     implementation project(':react-native-android-location-enabler')
     
+    implementation project(':@react-native-camera-roll_camera-roll')
+
     implementation platform('com.google.firebase:firebase-bom:31.2.2')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
