--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-camera-roll/camera-roll": "^5.2.4",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-firebase/app": "^17.3.1",
     "@react-navigation/bottom-tabs": "^6.5.4",
@@ -35,12 +36,15 @@
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-maps": "^1.4.0",
     "react-native-push-notification": "^8.1.1",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.5.0",
     "react-native-vision-camera": "^2.15.4",
     "vision-camera-code-scanner": "^0.2.0"
   },
