--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-element-dropdown": "^2.6.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.39.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.4.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-svg": "^6.2.0",
