--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-dotenv": "^3.4.7",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-element-dropdown": "^2.6.0",
+    "react-native-gifted-charts": "^1.2.42",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-linear-gradient": "^2.6.2",
