Build base chart

--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "react-native": "0.71.1",
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-animated-loader": "^1.0.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^4.2.9",
     "react-native-dotenv": "^3.4.7",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-element-dropdown": "^2.6.0",
-    "react-native-gifted-charts": "^1.2.42",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-linear-gradient": "^2.6.2",
