--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -173,6 +173,8 @@ dependencies {
     
     implementation project(':@react-native-camera-roll_camera-roll')
 
+    implementation project(':react-native-geocoder')
+
     implementation platform('com.google.firebase:firebase-bom:31.2.2')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
