--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-camera-roll/camera-roll": "^5.2.4",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-firebase/app": "^17.3.1",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/drawer": "^6.5.8",
     "@react-navigation/native": "^6.1.3",
@@ -44,6 +45,7 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.8.0",
     "react-native-vector-icons": "^9.2.0",
