--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,6 +163,8 @@ dependencies {
     
     implementation('com.google.firebase:firebase-analytics:17.3.0')
     
+    implementation("com.pusher:pusher-java-client:2.4.4")
+    
     implementation project(':react-native-splash-screen')
 
     implementation project(':lottie-react-native')
