--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@pusher/pusher-websocket-react-native": "^1.2.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.2.4",
     "@react-native-community/geolocation": "^3.0.5",
