--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^2.14.4",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-skeleton-placeholder": "^5.2.4",
