--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pusher/pusher-websocket-react-native": "^1.2.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-camera-roll/camera-roll": "^5.2.4",
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/geolocation": "^3.0.5",
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-masked-view/masked-view": "^0.2.8",
@@ -40,6 +41,7 @@
     "react-native-image-crop-picker": "^0.39.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.4.0",
+    "react-native-neomorph-shadows": "^1.1.2",
     "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-svg": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
